refactor: work around native image blocklists (1/N)
- Throwable#addSuppressed: replace try-with with try-finally
- Avoid polymorphic dispatch (List, Iterator, toString/hashCode)